# test

./: CMakeLists.txt  README.md  Simulation.cpp  Simulation.h  check.py  main.cpp  menu_file.json  settings.json  tests.cpp
Classes/: Account.cpp  Account.h  Bill.cpp  Bill.h  Customer.cpp  Customer.h  Dish.cpp  Dish.h  Ingredient.cpp  Ingredient.h  Kitchen.cpp  Kitchen.h  Menu.cpp  Menu.h  Recipe.cpp  Recipe.h  Restaurant.cpp  Restaurant.h  Shop.cpp  Shop.h  Table.cpp  Table.h  Waiter.cpp  Waiter.h
